--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.jflex-1.6.1.jar=../../1 - Java Libraries/jflex-1.6.1/lib/jflex-1.
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jflex-1.6.1.jar}
+    ${file.reference.jflex-1.6.1.jar}:\
+    ${libs.JFlex.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +63,7 @@ main.class=analizador.Flex
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=jdk-8u65-windows-x64
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
